...
                        android:layout_weight="0"
                        android:text="@string/end_date_field"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        tools:ignore="InefficientWeight" />

                    <TextView
                        android:id="@+id/et_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/end_date_selection"
                        tools:ignore="Autofill,TextFields" />

...
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/tags_separate_them_with_a_coma"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/event_management_tags_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:inputType="text"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
...
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/id_spinner_organiser_layout">

                <Switch
                    android:id="@+id/id_swt_limited_event"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/switch_limited_event_text"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <EditText
                    android:id="@+id/it_et_nb_part"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/number_participants_hint"
...
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/name_field_hint"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_event_management_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:text=""
...
                        android:layout_weight="0"
                        android:text="@string/start_date_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        tools:ignore="InefficientWeight" />

                    <TextView
                        android:id="@+id/et_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/start_date_hint"
                        tools:ignore="TextFields" />
...



            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/id_manage_event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_layout_date_end" />

...
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/description_hint"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_description_event_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:inputType="textMultiLine|text"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
...
